src/objects/loan__Fee_Payment__c.object
<CustomObject>
    <fields>
        <fullName>loan__ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>loan__Charge__c</referenceTo>
        <relationshipLabel>Fee Payment</relationshipLabel>
        <relationshipName>Fee_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Fee Payment</relationshipLabel>
        <relationshipName>Fee_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Fee Payment</relationshipLabel>
        <relationshipName>Fee_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipLabel>Fee Payment</relationshipLabel>
        <relationshipName>Fee_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__VAT__c</fullName>
        <formula>IF(OR(ISNULL(loan__Charge__r.peer__VAT_percent__c),  ISPICKVAL( loan__Charge__r.loan__Fee__r.loan__Time_of_charge__c, &apos;Late Fees&apos;)), 0, (loan__Transaction_Amount__c *  loan__Charge__r.peer__VAT_percent__c )/(1 + loan__Charge__r.peer__VAT_percent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fee Payment</label>
    <nameField>
        <displayFormat>FPID-{0000000000}</displayFormat>
        <label>Fee Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>